[tool.poetry]
name = "przetwarzanie-danych-zlozonych"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
jupyter-book = "^0.13.1"
toml = "^0.10.2"
ghp-import = "^2.1.0"
matplotlib = "^3.6.2"
pydot = "^1.4.2"
networkx = "^2.8.8"
graphviz = "^0.20.1"
river = "^0.14.0"
jupyter = "^1.0.0"
seaborn = "^0.12.1"
setuptools = "^65.6.3"
plotly = "^5.11.0"
tqdm = "^4.64.1"
scikit-learn = "^1.2.0"
netCDF4 = "^1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
